# polars_plugins

./: .gitignore  Cargo.toml
lowess/: Cargo.toml
lowess/src/: lib.rs
lowess_legacy/: Cargo.toml
lowess_legacy/src/: lib.rs
lowess_plugin/: Cargo.toml
lowess_plugin/src/: lib.rs
weighted_mean/: Cargo.toml
weighted_mean/src/: lib.rs
weighted_mean_copy/: Cargo.toml
weighted_mean_copy/src/: lib.rs
weighted_quantile/: Cargo.toml
weighted_quantile/src/: lib.rs
