[workspace]
resolver = "2"

members = [
    "lowess",
    "weighted_mean",
]

[workspace.dependencies]
polars = { version = "0.40.0", default-features = false, features = ["lazy"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
