[package]
name = "weighted_mean"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.40.0", default-features = false, features = ["lazy"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
